# boborujoguferofork

./: CNAME  Dockerfile  LICENSE  Makefile  README.md  app.py  fly.toml  index.html  pyproject.toml  pyvenv.cfg
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
local/: Makefile  prometheus.yml
parsers/: bobor.py  shmu.py
sauna/: status.py
