[tool.poetry]
name = "sauna-bobor-status"
version = "0.1.0"
description = ""
authors = ["mtmn <miro@mtmn.name>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
flask = "^3.1.2"
requests = "^2.32.0"
beautifulsoup4 = "^4.14.3"
gunicorn = "^23.0.0"
huey = "^2.6.0"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
